--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,7 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+
+* {
+	font-family: "Pretendard-Regular", sans-serif;
+}
